# smart-file-organizer-pro

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: categories.py  config.py  duplicates.py  mover.py  organizer.py  reporter.py  scanner.py
sample_messy_folder/: duplicate.txt  index.html  notes.txt  presentation.pptx  script.py  unknown.xyz
tests/: test_categories.py  test_config.py  test_duplicates.py  test_helpers.py  test_logger.py  test_manifest.py  test_mover.py  test_organizer.py  test_reporter.py  test_scanner.py  test_watcher.py
utils/: helpers.py  logger.py  manifest.py  watcher.py
